<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.example.toys.LampView
        android:id="@+id/lamp"
        android:layout_width="415dp"
        android:layout_height="390dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/rhythm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="center"
        app:contentDescription="Rhythm selection button"
        app:layout_constraintBottom_toTopOf="@+id/save_presets_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bpm_text"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_presets_button" />

    <Button
        android:id="@+id/increase_bpm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/increase"
        app:layout_constraintBottom_toBottomOf="@+id/decrease_bpm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bpm_text"
        app:layout_constraintTop_toBottomOf="@+id/lamp" />

    <TextView
        android:id="@+id/bpm_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:scrollbarSize="0dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/decrease_bpm_button"
        app:layout_constraintEnd_toStartOf="@+id/increase_bpm_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/decrease_bpm_button"
        app:layout_constraintTop_toBottomOf="@+id/lamp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/decrease_bpm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/decrease"
        app:layout_constraintBottom_toTopOf="@+id/rhythm_button"
        app:layout_constraintEnd_toStartOf="@+id/bpm_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lamp" />

    <Button
        android:id="@+id/save_presets_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_preset"
        app:layout_constraintBottom_toTopOf="@+id/play_button"
        app:layout_constraintEnd_toStartOf="@+id/show_presets_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rhythm_button" />

    <Button
        android:id="@+id/show_presets_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/load_preset"
        app:layout_constraintBottom_toTopOf="@+id/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/save_presets_button"
        app:layout_constraintTop_toBottomOf="@+id/rhythm_button" />

</androidx.constraintlayout.widget.ConstraintLayout>